Fixed potential spacing bug in layout after window resize

--- a/src/components/splash.module.css
+++ b/src/components/splash.module.css
@@ -16,6 +16,9 @@
 }
 
 @media (min-width: 768px) {
+    .adaptsToNavOpen {
+        padding: 0;
+    }
     .splash .container {
         padding-top: 200px;
         padding-bottom: 100px;
